# battlesim2

./: .eslintrc.json  .gitignore  ADDITIONAL_ACTION_TRIGGER_PLAN.md  AGENTS.md  Architecture.md  BACKEND_API.md  BUFF_CLEANUP_ANALYSIS.md  BUG_ANALYSIS.md  CLI_SIMULATION_GUIDE.md  CODE_REVIEW_20251204_080218.md  CONCENTRATION_DEBUG_PLAN.md  DATA_FLOW.md  DECILE_METHODOLOGY.md  DEPENDENCY_UPDATE_REPORT.md  DUAL_SLOT_STORAGE_IMPLEMENTATION_PLAN.md  ELECTRON_BUILD.md  FRONTEND_API.md  IMPLEMENTATION_BLESS.md  IMPLEMENTATION_GUIDE.md  ISSUES.md  Kaelen2.json  Kaelen2_bane.json  MIGRATION_GUIDE.md  PHASE3_IMPLEMENTATION_COMPLETE.md  PHASE3_IMPLEMENTATION_GUIDE.md  PHASE3_IMPLEMENTATION_PLAN.md  PHASE3_IMPLEMENTATION_SUMMARY.md  PHASE_1_IMPLEMENTATION_PLAN.md  PHASE_2_IMPLEMENTATION_PLAN.md  PHASE_3_IMPLEMENTATION_PLAN.md  QUINTILE_DEBUGGING_PLAN.md  QUINTILE_METHODOLOGY.md  README.md  REFACTOR_PLAN_SCORING_AND_CLEANUP.md  REGRESSION_TEST_REPORT.md  REWORK_CRITIC.md  SIMULATION_ARCHITECTURE_REDESIGN.md  TODO.md  Test_adventuring_Day.json  UI_ENHANCEMENT_PLAN.md  (+46 more)
simulation-wasm/: Cargo.toml  PHASE2_COMPLETE.md  PHASE2_IMPLEMENTATION_SUMMARY.md  PHASE4_IMPLEMENTATION_PLAN.md  PHASE5_IMPLEMENTATION_PLAN.md  REFACTOR_MAPPING.md  analysis_output.json  check_out.txt  check_output.txt  check_output_3.txt  cli_test_scenario.json  clippy_out.txt  debug_output.txt  fixed_scenario.json  full_output.txt  gwm_test.json  kaelen_battle.json  output.txt  output_2.txt  simple_scenario.json  simulation_runner.js  test_andrew_bernd.json  test_andrew_bob.json  test_balanced.json  test_bless_bane.json  test_input.json  test_multi_monster.json  test_multiattack.json  test_output.txt  test_output_2.txt  test_party_vs_boss.json  test_tiebreaker.json  validated_scenario.json
simulation-wasm/Kaelen2_runs/: run_0.json  run_1.json  run_10.json  run_100.json  run_1000.json  run_1001.json  run_1002.json  run_1003.json  run_1004.json  run_101.json  run_102.json  run_103.json  run_104.json  run_105.json  run_106.json  run_107.json  run_108.json  run_109.json  run_11.json  run_110.json  run_111.json  run_112.json  run_113.json  run_114.json  run_115.json  run_116.json  run_117.json  run_118.json  run_119.json  run_12.json  run_120.json  run_121.json  run_122.json  run_123.json  run_124.json  run_125.json  run_126.json  run_127.json  run_128.json  run_129.json  (+965 more)
simulation-wasm/examples/: comprehensive_quintile_analysis.rs  comprehensive_regression_test.rs  debug_dpr.rs  debug_monster_r1.rs  phase2_background_processing.rs  phase2_simple_demo.rs  run_quintile_test.rs  run_scenarios.rs  run_sim_from_file.rs  storage_demo.rs  test_buff_cleanup.rs  test_rating_system.rs
simulation-wasm/src/: dice.rs  (+63 more)
(+5719 files in other folders)
