[package]
name = "simulation-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = { version = "0.8", features = ["small_rng"] }
# Pin getrandom to v0.2 to avoid breaking changes in v0.3
getrandom = { version = "=0.2.15", features = ["js"] }
serde-wasm-bindgen = "0.6.5"
