[package]
name = "simulation-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly-based D&D 5e combat simulation engine"
license = "MIT"
repository = "https://github.com/max/battlesim2"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
console_log = "1.0.0"
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = { version = "0.8", features = ["small_rng"] }
# Pin getrandom to v0.2 to avoid breaking changes in v0.3
getrandom = { version = "=0.2.15", features = ["js"] }
serde-wasm-bindgen = "0.6.5"
web-sys = { version = "0.3", features = ["console"] }
clap = { version = "4", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "wasm-bindgen"] }
lz4_flex = { version = "0.11", default-features = false }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
