[package]
name = "simulation-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly-based D&D 5e combat simulation engine"
license = "MIT"
repository = "https://github.com/max/battlesim2"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
console_log = "1.0.0"
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = { version = "0.8", features = ["small_rng"] }
# Pin getrandom to v0.2 to avoid breaking changes in v0.3
getrandom = { version = "=0.2.15", features = ["js"] }
serde-wasm-bindgen = "0.6.5"
web-sys = { version = "0.3", features = ["console"] }
# CLI-only dependencies - excluded from WASM builds
clap = { version = "4", features = ["derive"], optional = true }
uuid = { version = "1.0", features = ["v4", "wasm-bindgen"], optional = true }
# lz4_flex removed as storage functionality is no longer needed

[features]
default = []
cli = ["clap", "uuid"]

[[bin]]
name = "sim_cli"
path = "src/bin/sim_cli.rs"
required-features = ["cli"]

[dev-dependencies]
proptest = "1.4"
insta = { version = "1.38", features = ["json", "redactions"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
